# BSTU_6sem

AIS/: 8. ЛР Zabbix.docx
AIS/AIS_lab1/: AIS-lab1.docx
AIS/AIS_lab3/: AIS_lab3.docx
AIS/AIS_lab6_7/: +10-11. ЛР docker.docx  AIS_lab4.docx
AIS/AIS_lab_no/: +14-15. ЛР IIS.docx  AIS_lab5.docx  Лабораторная работа 6 (2).docx
CMZI/CMZI_lab10/: Лабораторная_работа_10.docx
CMZI/CMZI_lab11/: Лабораторная_работа_11.docx
CMZI/CMZI_lab2/: 1 Основные понятия и определения.ppt  2 Информационная система.ppt  Лабораторная_работа_2.docx
CMZI/CMZI_lab3/: danish.txt  Лабораторная_работа_3.docx
OKG/OKG_lab1/: X.txt  (+2 more)
SP/: test.cpp
SP/SP_lab_3/Lab3_CMake/: CMakeLists.txt
SP/SP_lab_3/Lab3_CMake/LPVDLib/: CMakeLists.txt
SP/SP_lab_3/Lab3_CMake/LPVDLib++/: CMakeLists.txt
SP/SP_lab_3/Lab3_CMake/LPVDLib++/src/: MyLibDD.def
SP/SP_lab_3/Lab3_CMake/LPVDLib/include/: MyLibD.h
SP/SP_lab_3/Lab3_CMake/LPVDLib/src/: MyLibD.c  MyLibD.def
SP/SP_lab_3/Lab3_CMake/LPVLib/: CMakeLists.txt
SP/SP_lab_3/Lab3_CMake/Lab-03a/: CMakeLists.txt
SP/SP_lab_3/Lab3_CMake/Lab-03b-Explicit/: CMakeLists.txt
SP/SP_lab_3/Lab3_CMake/Lab-03b-Explicit/src/: Lab-03b-ex.c
SP/SP_lab_3/Lab3_CMake/Lab-03b-Implicit/: CMakeLists.txt
SP/SP_lab_3/Lab3_CMake/Lab-03c/: CMakeLists.txt
SP/SP_lab_3/Lab3_CMake/Lab-03c/src/: Lab-03c.c
SP/SP_lab_3/Lab3_CMake/LibLPVd/: CMakeLists.txt
SP/SP_lab_3/Lab3_CMake/LibLPVd/include/: LibLPVd.h
SP/SP_lab_3/Lab3_CMake/LibLPVd/src/: LibLPVd.c
SP/SP_lab_3/Lab3_CMake/logs/: MyLibDlogs.txt
SP/SP_lab_4/COM+CMake/ComSampleClient/: .clangd  CMakeLists.txt  Main.cpp
(+757 files in other folders)
